# app/Models/Trips.php
@@ -1,0 +1,46 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Trips extends Model
+{
+    use HasFactory;
+
+    /**
+     * The table associated with the model.
+     *
+     * @var string
+     */
+    protected $table = 'trips';
+
+
+    protected $fillable = [
+        'start_time',
+        'end_time',
+        'passengers',
+        'vehicle_id',
+        'start_lat',
+        'start_lng',
+        'end_lat',
+        'end_lng',
+        'driver_id'        
+    ];
+
+
+    /**
+     * The attributes that should be hidden for serialization.
+     *
+     * @var array<int, string>
+     */
+    protected $hidden = [
+        'created_at',
+        'updated_at',
+        'deleted_at'            
+    ];
+
+
+
+}
